# S-R-1

./:  job_integrated_pipeline.sbatch  .gitignore  README.md  job_astropy_pipeline.sbatch  job_leetcode.sbatch  job_leetcode_baseline.sbatch  job_leetcode_easy.sbatch  job_leetcode_easy_v2.sbatch  job_leetcode_hard.sbatch  job_leetcode_hard_v2.sbatch  job_leetcode_medium.sbatch  job_leetcode_medium_v2.sbatch  job_robust_pipeline.sbatch  job_swebench.sbatch  leetcode_baseline_pipeline.py  leetcode_results_analyzer.py  pyproject.toml  run_adaptive_comparison.py  run_chain_of_thought_benchmark.sh  run_gpu_job.sh  run_model_comparison.sh  run_self_reflection_benchmark.sh  run_swe_bench_evaluation.sh  run_swe_bench_experiment.sh  submit_all_jobs.sh  submit_all_jobs_v2.sh
configs/agents/: code_refinement.yaml  improved_code_refinement.yaml  patch_refinement.yaml  tree_of_thought_diagnostic.yaml  tree_of_thought_patch.yaml
configs/datasets/: swe_bench_lite.yaml  swe_bench_verified.yml
configs/evaluators/: python_exec.yaml  swe_bench_eval.yaml
configs/experiments/: bug_detector.yaml  deepseek_experiment.yaml  improved_code_refinement_experiment.yaml  integrated_pipeline.yaml  leetcode_solver.yaml  qwen_coder_experiment.yaml  qwen_swe_bench.yaml  qwq_experiment.yaml  robust_pipeline.yaml  swe_bench_experiment.yaml  tot_patch_experiment.yaml
configs/models/: deepseek-coder.yaml  deepseek_32b.yaml  deepseek_qwen.yaml  model_configs.yaml  qwen-coder.yaml  qwen_32b.yaml  qwen_coder.yaml  qwq_32b.yaml  qwq_preview.yaml  yi-chat.yaml
configs/prompts/: chain_of_thought.yaml  code_gen.yaml  reasoning.yaml  self_reflection.yaml  swe_bench_prompt.yaml  tree_of_thought.yaml
diagrams/: design.puml
problems/: coding_problem.txt
results/: comparison_20250314_192058.txt  comparison_20250314_194607.txt  deepseek_experiment_20250309_192754.json  deepseek_experiment_20250311_185522.json  deepseek_experiment_20250311_191746.json  deepseek_experiment_20250314_195649.json  qwen_coder_experiment_20250309_173709.json  qwen_coder_experiment_20250309_192313.json  qwen_coder_experiment_20250311_184642.json  qwen_coder_experiment_20250311_190940.json  qwen_coder_experiment_20250311_192948.json  qwen_coder_experiment_20250314_195018.json  qwq_experiment_20250309_192609.json  qwq_experiment_20250311_185102.json  qwq_experiment_20250311_191353.json  qwq_experiment_20250311_193402.json  qwq_experiment_20250314_193133.json  qwq_experiment_20250314_195335.json
results/enhanced_bug_detector/: bug_locations.json  summary.json  (+1 more)
src/: main.py  old_main.py
(+687 files in other folders)
