[project]
name = "s-r-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "accelerate>=1.4.0",
    "anthropic>=0.49.0",
    "bitsandbytes>=0.45.3",
    "datasets>=3.4.1",
    "dotenv>=0.9.9",
    "huggingface-hub>=0.29.1",
    "jsonschema>=4.23.0",
    "matplotlib>=3.9.4",
    "openai>=1.65.2",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "transformers>=4.49.0",
]
