[project]
name            = "s-r-1"
version         = "0.1.0"
description     = "Add your description here"
readme          = "README.md"
requires-python = ">=3.9"

dependencies = [
    # — core HF stack —
    "torch==2.4.1+cu124", # last torch with CUDA 12.4 wheels + bnb support
    "transformers>=4.41,<4.50",    # first versions with stable BitsAndBytesConfig
    "accelerate>=0.27.2,<0.28",    # 1.x doesn’t exist (yet) → keep 0.27 branch
    "bitsandbytes>=0.43.2,<0.44",  # supports torch 2.3 + CUDA 12.x
    "flash-attn>=2.7.4.post1",           # pre‑compiled for CUDA 12.4; brings fast attention
    "huggingface-hub>=0.22.2,<0.26",

    # — RAG / similarity —
    "sentence-transformers>=2.7.0,<3.0.0",
    "scikit-learn>=1.4.2,<1.6",    # indirect dep of s‑t
    "datasets>=3.4.1,<3.6.0",

    # — science / viz —
    "matplotlib>=3.9.0,<3.11",
    "seaborn>=0.13.2,<0.14",
    "scipy>=1.13.1,<1.14",

    # — LLM service clients (optional, no GPU ties) —
    "openai>=1.11.0,<2.0.0",
    "anthropic>=0.25.0,<1.0.0",
    "python-dotenv>=1.0.1,<2.0.0",

    # — misc —
    "jsonschema>=4.23.0,<5.0.0",
    "tqdm>=4.66.4,<5.0.0"
]
